--- a/notes.html
+++ b/notes.html
@@ -252,13 +252,17 @@
                     <div class="course-body">
                       <p>
                         This course covers two main topics:
-                        <strong>Laser Device Technology</strong> and
-                        <strong>Nonlinear Optics</strong>. I am not particularly
-                        interested in the first topic, as it focuses primarily
-                        on conceptual understanding and requires memorizing
-                        numerous concepts for exams, rather than employing
-                        rigorous mathematical derivations to prove or explore
-                        the principles in depth.
+                        <strong style="font-weight: 700"
+                          >Laser Device Technology</strong
+                        >
+                        and
+                        <strong style="font-weight: 700"
+                          >Nonlinear Optics</strong
+                        >. I am not particularly interested in the first topic,
+                        as it focuses primarily on conceptual understanding and
+                        requires memorizing numerous concepts for exams, rather
+                        than employing rigorous mathematical derivations to
+                        prove or explore the principles in depth.
                       </p>
                       <div class="resource-links">
                         <i class="fas fa-book"></i>&nbsp;&nbsp;<strong
@@ -295,10 +299,14 @@
                     <div class="course-body">
                       <p>
                         This course consists of two parts:
-                        <strong>Complex Analysis</strong> by Prof. Cheng-Gang
-                        Shao and
-                        <strong>Equations of Mathematical Physics</strong> by
-                        Prof. Yong Hu.
+                        <strong style="font-weight: 700"
+                          >Complex Analysis</strong
+                        >
+                        by Prof. Cheng-Gang Shao and
+                        <strong style="font-weight: 700"
+                          >Equations of Mathematical Physics</strong
+                        >
+                        by Prof. Yong Hu.
                       </p>
                       <div class="resource-links">
                         <i class="fas fa-book"></i>&nbsp;&nbsp;<strong
