--- a/notes/year.html
+++ b/notes/year.html
@@ -116,7 +116,9 @@
                   </header>
                   <ul>
                     <li>
-                      <strong>Quantum Theory of Matter</strong><br />
+                      <strong style="font-weight: 700"
+                        >Quantum Theory of Matter</strong
+                      ><br />
                       <i class="fas fa-star"></i>&nbsp;&nbsp;<strong
                         >Study Notes: </strong
                       ><a
@@ -127,15 +129,19 @@
                   </ul>
                   <ul>
                     <li>
-                      <strong>Laser Technology</strong><br />
+                      <strong style="font-weight: 700">Laser Technology</strong
+                      ><br />
                       This course covers two main topics:
-                      <strong>Laser Device Technology</strong> and
-                      <strong>Nonlinear Optics</strong>. I am not particularly
-                      interested in the first topic, as it focuses primarily on
-                      conceptual understanding and requires memorizing numerous
-                      concepts for exams, rather than employing rigorous
-                      mathematical derivations to prove or explore the
-                      principles in depth. <br />
+                      <strong style="font-weight: 700"
+                        >Laser Device Technology</strong
+                      >
+                      and
+                      <strong style="font-weight: 700">Nonlinear Optics</strong
+                      >. I am not particularly interested in the first topic, as
+                      it focuses primarily on conceptual understanding and
+                      requires memorizing numerous concepts for exams, rather
+                      than employing rigorous mathematical derivations to prove
+                      or explore the principles in depth. <br />
                       <i class="fas fa-star"></i>&nbsp;&nbsp;<strong
                         >Study Notes: </strong
                       ><a
@@ -158,7 +164,9 @@
                   </header>
                   <ul>
                     <li>
-                      <strong>Quantum Information</strong>
+                      <strong style="font-weight: 700"
+                        >Quantum Information</strong
+                      >
                       <br />
                       This course was taught by Prof. Myungshik Kim. My notes
                       were based on his lecture notes and the textbook by
@@ -172,7 +180,8 @@
                   </ul>
                   <ul>
                     <li>
-                      <strong>Quantum Optics</strong><br />
+                      <strong style="font-weight: 700">Quantum Optics</strong
+                      ><br />
                       <i class="fas fa-star"></i>&nbsp;&nbsp;<strong
                         >Study Notes: </strong
                       ><a href="/docs/notes/notes-on-quantum-optics.pdf"
@@ -182,15 +191,17 @@
                   </ul>
                   <ul>
                     <li>
-                      <strong>Mathematical Methods for Physicists</strong><br />
+                      <strong style="font-weight: 700"
+                        >Mathematical Methods for Physicists</strong
+                      ><br />
                       <i class="fas fa-star"></i>&nbsp;&nbsp;
-                      <strong>Study Notes: </strong
+                      <strong style="font-weight: 700">Study Notes: </strong
                       ><a
                         href="/docs/notes/notes-on-mathematical-methods-for-physicists.pdf"
                         >Mathematical Methods for Physicists</a
                       ><br />
                       <i class="fas fa-book"></i>&nbsp;&nbsp;
-                      <strong>Review Notes: </strong
+                      <strong style="font-weight: 700">Review Notes: </strong
                       ><a href="/docs/notes/revision-for-2024-mmp-exam.pdf"
                         >Mathematical Methods for Physicists</a
                       >
@@ -198,7 +209,9 @@
                   </ul>
                   <ul>
                     <li>
-                      <strong>Advanced Classical Mechanics</strong><br />
+                      <strong style="font-weight: 700"
+                        >Advanced Classical Mechanics</strong
+                      ><br />
                       <i class="fas fa-star"></i>&nbsp;&nbsp;<strong
                         >Study Notes: </strong
                       ><a
@@ -216,7 +229,8 @@
                   </header>
                   <ul>
                     <li>
-                      <strong>Thermodynamics and Statistical Physics</strong
+                      <strong style="font-weight: 700"
+                        >Thermodynamics and Statistical Physics</strong
                       ><br />
                       This course, taught by Prof. Shun Wang, was quite
                       challenging. It was conducted entirely in English,
@@ -235,7 +249,9 @@
                   </ul>
                   <ul>
                     <li>
-                      <strong>Solid State Physics</strong><br />
+                      <strong style="font-weight: 700"
+                        >Solid State Physics</strong
+                      ><br />
                       This course was taught by Prof. Liu-Song Yuan.<br />
                       <i class="fas fa-book"></i>&nbsp;&nbsp;<strong
                         >Review Notes: </strong
@@ -246,7 +262,8 @@
                   </ul>
                   <ul>
                     <li>
-                      <strong>Quantum Optics</strong><br />
+                      <strong style="font-weight: 700">Quantum Optics</strong
+                      ><br />
                       This course was taught by Prof. Jia-Hua Li.<br />
                       <i class="fas fa-star"></i>&nbsp;&nbsp;<strong
                         >Study Notes: </strong
@@ -262,7 +279,9 @@
                   </ul>
                   <ul>
                     <li>
-                      <strong>Introduction to Plasma Physics</strong><br />
+                      <strong style="font-weight: 700"
+                        >Introduction to Plasma Physics</strong
+                      ><br />
                       This course was taught by Prof. He-Lin Wei.<br />
                       <i class="fas fa-star"></i>&nbsp;&nbsp;<strong
                         >Study Notes: </strong
@@ -273,7 +292,8 @@
                   </ul>
                   <ul>
                     <li>
-                      <strong>Physics GRE</strong><br />
+                      <strong style="font-weight: 700">Physics GRE</strong
+                      ><br />
                       These are my self-study notes for the Physics GRE, which I
                       took in 2021.<br />
                       <i class="fas fa-star"></i>&nbsp;&nbsp;<strong
@@ -292,7 +312,7 @@
                   </header>
                   <ul>
                     <li>
-                      <strong>Optics</strong><br />
+                      <strong style="font-weight: 700">Optics</strong><br />
                       This term was unique due to COVID-19, as we had to attend
                       lectures online from home. The course was taught by Prof.
                       Lu-Shuai Cao and Prof. Ze-Huang Lu. My notes were selected
@@ -323,7 +343,9 @@
                   </ul>
                   <ul>
                     <li>
-                      <strong>Analogue Electronics</strong><br />
+                      <strong style="font-weight: 700"
+                        >Analogue Electronics</strong
+                      ><br />
                       This course was taught by Prof. Tian-Ping Deng. My notes
                       based on his lecture online,
                       <a href="https://www.icourse163.org/course/hust-481015"
@@ -355,7 +377,8 @@
                   </ul>
                   <ul>
                     <li>
-                      <strong>Quantum Mechanics</strong><br />
+                      <strong style="font-weight: 700">Quantum Mechanics</strong
+                      ><br />
                       This course was taught by Prof. Ying Wu and Prof. Jia-Hua
                       Li. However, it overlapped with another advanced course I
                       had selected, so I decided to learn independently. My
@@ -380,7 +403,8 @@
                   </ul>
                   <ul>
                     <li>
-                      <strong>Electrodynamics</strong><br />
+                      <strong style="font-weight: 700">Electrodynamics</strong
+                      ><br />
                       This course was taught by Prof. Zhao-Feng Kang.<br />
                       <i class="fas fa-book"></i>&nbsp;&nbsp;<strong
                         >Review Notes: </strong
@@ -391,7 +415,9 @@
                   </ul>
                   <ul>
                     <li>
-                      <strong>Advanced Quantum Mechanics</strong><br />
+                      <strong style="font-weight: 700"
+                        >Advanced Quantum Mechanics</strong
+                      ><br />
                       This course was taught by Prof. Yong Hu.<br />
                       <i class="fas fa-star"></i>&nbsp;&nbsp;<strong
                         >Study Notes: </strong
@@ -402,7 +428,9 @@
                   </ul>
                   <ul>
                     <li>
-                      <strong>Digital Electronics</strong><br />
+                      <strong style="font-weight: 700"
+                        >Digital Electronics</strong
+                      ><br />
                       This course was taught by Prof. Qi Song.<br />
                       <i class="fas fa-star"></i>&nbsp;&nbsp;<strong
                         >Study Notes: </strong
@@ -433,7 +461,9 @@
                   </ul>
                   <ul>
                     <li>
-                      <strong>Quantum Mechanics II</strong><br />
+                      <strong style="font-weight: 700"
+                        >Quantum Mechanics II</strong
+                      ><br />
                       These are my lecture notes from the Quantum Mechanics II
                       course taught by Prof. Zhixin Qian during the 2020 Summer
                       School at Peking University.<br />
@@ -483,13 +513,17 @@
                   </header>
                   <ul>
                     <li>
-                      <strong>Mathematical Methods in Physics</strong><br />
+                      <strong style="font-weight: 700"
+                        >Mathematical Methods in Physics</strong
+                      ><br />
                       This course consists of two parts. The first part,
-                      <strong>Complex Analysis</strong>, was taught by Prof.
-                      Cheng-Gang Shao. The second part,
-                      <strong>Equations of Mathematical Physics</strong>, was
-                      taught by Prof. Yong Hu. The content and structure of my
-                      notes primarily derived from his lecture notes. <br />
+                      <strong style="font-weight: 700">Complex Analysis</strong
+                      >, was taught by Prof. Cheng-Gang Shao. The second part,
+                      <strong style="font-weight: 700"
+                        >Equations of Mathematical Physics</strong
+                      >, was taught by Prof. Yong Hu. The content and structure
+                      of my notes primarily derived from his lecture notes.
+                      <br />
                       <i class="fas fa-book"></i>&nbsp;&nbsp;<strong
                         >Review Note: </strong
                       ><a href="/docs/notes/[复变函数]期末复习笔记.pdf"
@@ -504,7 +538,9 @@
                   </ul>
                   <ul>
                     <li>
-                      <strong>Theoretical Mechanics</strong><br />
+                      <strong style="font-weight: 700"
+                        >Theoretical Mechanics</strong
+                      ><br />
                       Taught by Prof. Sheng-You Huang, this course covered
                       topics ranging from Lagrangian Mechanics to Hamiltonian
                       Mechanics, with several applications including central
@@ -519,7 +555,8 @@
                   </ul>
                   <ul>
                     <li>
-                      <strong>Electromagnetics</strong><br />
+                      <strong style="font-weight: 700">Electromagnetics</strong
+                      ><br />
                       This course was taught by Prof. Xue-Wen Chen, which
                       covered include electrostatics, magnetostatics,
                       electromagnetic waves, and Maxwell's equations.<br />
