--- a/publications.html
+++ b/publications.html
@@ -86,10 +86,10 @@
               </header>
               <ul>
                 <li>
-                  <strong>Chen Huang</strong>, Xi Zhao, Hongze Xu, Weifeng
-                  Zhuang, Meng-Jun Hu, Dong E. Liu, and Jingbo Wang, "ZAP: Zoned
-                  Architecture and Parallelizable Compiler for Field
-                  Programmable Atom Array,"
+                  <strong style="font-weight: 700">Chen Huang</strong>, Xi Zhao,
+                  Hongze Xu, Weifeng Zhuang, Meng-Jun Hu, Dong E. Liu, and
+                  Jingbo Wang, "ZAP: Zoned Architecture and Parallelizable
+                  Compiler for Field Programmable Atom Array,"
                   <i
                     >arXiv preprint
                     <a href="https://arxiv.org/abs/2411.14037"
@@ -111,9 +111,10 @@
               </header>
               <ul>
                 <li>
-                  Jingbo Wang and <strong>Chen Huang</strong>, "Ion trap chip
-                  parameter determining method and device, electronic equipment
-                  and medium,"
+                  Jingbo Wang and
+                  <strong style="font-weight: 700">Chen Huang</strong>, "Ion
+                  trap chip parameter determining method and device, electronic
+                  equipment and medium,"
                   <i
                     >Chinese Patent
                     <a href="https://patents.google.com/patent/CN117371547/en"
@@ -125,9 +126,10 @@
                   >)
                 </li>
                 <li>
-                  Jingbo Wang and <strong>Chen Huang</strong>, "Ion trap chip
-                  parameter calibration method and device, electronic equipment
-                  and medium,"
+                  Jingbo Wang and
+                  <strong style="font-weight: 700">Chen Huang</strong>, "Ion
+                  trap chip parameter calibration method and device, electronic
+                  equipment and medium,"
                   <i
                     >Chinese Patent
                     <a href="https://patents.google.com/patent/CN117494829/en"
@@ -144,9 +146,9 @@
               </header>
               <ul>
                 <li>
-                  <strong>Chen Huang</strong> and Jingbo Wang, "Ion trap chip
-                  parameter correction method and device, electronic equipment
-                  and medium,"
+                  <strong style="font-weight: 700">Chen Huang</strong> and
+                  Jingbo Wang, "Ion trap chip parameter correction method and
+                  device, electronic equipment and medium,"
                   <i
                     >Chinese Patent
                     <a href="https://patents.google.com/patent/CN117454997/en"
