--- a/research/calibration-of-trapped-ion-systems.html
+++ b/research/calibration-of-trapped-ion-systems.html
@@ -123,9 +123,10 @@
                 </p>
                 <ul>
                   <li>
-                    J. Wang and <strong>C. Huang</strong>, "Ion trap chip
-                    parameter determining method and device, electronic
-                    equipment and medium,"
+                    J. Wang and
+                    <strong style="font-weight: 700">C. Huang</strong>, "Ion
+                    trap chip parameter determining method and device,
+                    electronic equipment and medium,"
                     <i
                       >Chinese Patent
                       <a href="https://patents.google.com/patent/CN117371547/en"
@@ -134,9 +135,10 @@
                     >, Granted 2024.
                   </li>
                   <li>
-                    J. Wang and <strong>C. Huang</strong>, "Ion trap chip
-                    parameter calibration method and device, electronic
-                    equipment and medium,"
+                    J. Wang and
+                    <strong style="font-weight: 700">C. Huang</strong>, "Ion
+                    trap chip parameter calibration method and device,
+                    electronic equipment and medium,"
                     <i
                       >Chinese Patent
                       <a href="https://patents.google.com/patent/CN117494829/en"
@@ -145,9 +147,9 @@
                     >, Granted 2024.
                   </li>
                   <li>
-                    <strong>C. Huang</strong> and J. Wang, "Ion trap chip
-                    parameter correction method and device, electronic equipment
-                    and medium,"
+                    <strong style="font-weight: 700">C. Huang</strong> and J.
+                    Wang, "Ion trap chip parameter correction method and device,
+                    electronic equipment and medium,"
                     <i
                       >Chinese Patent
                       <a href="https://patents.google.com/patent/CN117454997/en"
@@ -174,29 +176,33 @@
                 </p>
                 <ol>
                   <li>
-                    <strong>Qubit encoding:</strong> Individual ions are used as
-                    qubits by leveraging different energy levels within the ion.
-                    These levels often result from orbital splitting, forming
-                    fine or hyperfine structures. The ion's internal energy
-                    levels are typically rich and non-equidistant, making them
-                    suitable for qubit encoding.
+                    <strong style="font-weight: 700">Qubit encoding:</strong>
+                    Individual ions are used as qubits by leveraging different
+                    energy levels within the ion. These levels often result from
+                    orbital splitting, forming fine or hyperfine structures. The
+                    ion's internal energy levels are typically rich and
+                    non-equidistant, making them suitable for qubit encoding.
                   </li>
                   <li>
-                    <strong>Qubit manipulation:</strong> By carefully selecting
-                    specific laser frequencies and applying precise laser
-                    techniques, the trapped-ion system enables the preparation
-                    of initial quantum states, the manipulation of qubit states,
-                    and the measurement of quantum states.
+                    <strong style="font-weight: 700"
+                      >Qubit manipulation:</strong
+                    >
+                    By carefully selecting specific laser frequencies and
+                    applying precise laser techniques, the trapped-ion system
+                    enables the preparation of initial quantum states, the
+                    manipulation of qubit states, and the measurement of quantum
+                    states.
                   </li>
                   <li>
-                    <strong>Qubit coupling:</strong> Since ions are charged
-                    particles, they interact with one another through Coulomb
-                    forces, which include long-range interaction terms. This
-                    natural property allows ions in a quantum chip to form a
-                    fully connected network. Specially tailored laser or
-                    microwave techniques can be used to mediate interactions
-                    between any pair of qubits, granting the trapped-ion
-                    platform its inherent full-connectivity feature.
+                    <strong style="font-weight: 700">Qubit coupling:</strong>
+                    Since ions are charged particles, they interact with one
+                    another through Coulomb forces, which include long-range
+                    interaction terms. This natural property allows ions in a
+                    quantum chip to form a fully connected network. Specially
+                    tailored laser or microwave techniques can be used to
+                    mediate interactions between any pair of qubits, granting
+                    the trapped-ion platform its inherent full-connectivity
+                    feature.
                   </li>
                 </ol>
               </section>
