--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
             <div class="col-9 col-12-mobile imp-mobile" id="content">
               <header>
                 <h2>
-                  👋 Hi, I'm <strong>Chen</strong>,
+                  👋 Hi, I'm <strong style="font-weight: 700">Chen</strong>,
                   <div class="pronunciation-wrap">
                     <button
                       class="pronunciation-btn"
@@ -306,7 +306,7 @@
                 ></audio>
                 <p>
                   a passionate physics student exploring the
-                  <strong>quantum world</strong>.
+                  <strong style="font-weight: 700">quantum world</strong>.
                 </p>
               </header>
             </div>
@@ -315,18 +315,18 @@
         <div class="container">
           <article id="main" class="special">
             <p>
-              My given name is <strong>Chen</strong>, which means "dawn" or
-              "early morning" in Chinese. This meaning suits me well, as I am a
-              morning person who enjoys the calm and peacefulness of the early
-              hours. Interestingly, "Chen" is sometimes misheard as "Cheng,"
-              which means "orange" in Chinese. Because of this playful
-              similarity, my friends affectionately call me "Cheng-Zi", meaning
-              "orange."
+              My given name is <strong style="font-weight: 700">Chen</strong>,
+              which means "dawn" or "early morning" in Chinese. This meaning
+              suits me well, as I am a morning person who enjoys the calm and
+              peacefulness of the early hours. Interestingly, "Chen" is
+              sometimes misheard as "Cheng," which means "orange" in Chinese.
+              Because of this playful similarity, my friends affectionately call
+              me "Cheng-Zi", meaning "orange."
             </p>
             <p>
-              My surname is <strong>Huang</strong>, which means "yellow" in
-              Chinese. This name has deep historical and cultural roots. It is
-              often associated with the
+              My surname is <strong style="font-weight: 700">Huang</strong>,
+              which means "yellow" in Chinese. This name has deep historical and
+              cultural roots. It is often associated with the
               <a href="https://en.wikipedia.org/wiki/Yellow_Emperor"
                 >Yellow Emperor</a
               >, a legendary figure considered one of the founding ancestors of
@@ -387,14 +387,17 @@
                     >charge noise in semiconductor spin qubits for quantum
                     computing</i
                   ></strong
-                >. My work involves <strong>wire bonding</strong> quantum
+                >. My work involves
+                <strong style="font-weight: 700">wire bonding</strong> quantum
                 devices for characterization and studying
-                <strong>charge transport</strong> in semiconductor quantum dots
-                at cryogenic temperatures using a
-                <strong>dilution refrigerator</strong>. To streamline
-                experiments, I
-                <strong>developed an automated Python package</strong> that
-                standardizes communication across experimental devices,
+                <strong style="font-weight: 700">charge transport</strong> in
+                semiconductor quantum dots at cryogenic temperatures using a
+                <strong style="font-weight: 700">dilution refrigerator</strong>.
+                To streamline experiments, I
+                <strong style="font-weight: 700"
+                  >developed an automated Python package</strong
+                >
+                that standardizes communication across experimental devices,
                 significantly improving measurement efficiency.
               </p>
             </div>
@@ -411,7 +414,8 @@
                 <strong
                   ><i>compilation for neutral atom quantum computers</i></strong
                 >, an emerging quantum research field. I introduced
-                <strong>ZAP</strong>, a zoned architecture that
+                <strong style="font-weight: 700">ZAP</strong>, a zoned
+                architecture that
                 <strong
                   >divides the computational area into distinct storage and
                   entanglement zones</strong
@@ -419,8 +423,9 @@
                 algorithm, ZAP optimizes qubit placement and movement, fully
                 utilizing the dynamic connectivity and large-scale parallelism
                 of neutral atom platforms, leading to a
-                <strong>significant fidelity improvement</strong>. This work is
-                available on
+                <strong style="font-weight: 700"
+                  >significant fidelity improvement</strong
+                >. This work is available on
                 <a href="https://arxiv.org/abs/2411.14037">arXiv</a>.
               </p>
             </div>
@@ -441,11 +446,13 @@
                     computers</i
                   ></strong
                 >, enabling precise determination of
-                <strong>phonon frequencies</strong> and
-                <strong>Lamb-Dicke parameters</strong>. This Python-based tool
-                minimized manual intervention and enhanced parameter accuracy,
-                leading to <strong>three patents</strong>. My experience at
-                Baidu strengthened my <strong>coding skills</strong>,
+                <strong style="font-weight: 700">phonon frequencies</strong> and
+                <strong style="font-weight: 700">Lamb-Dicke parameters</strong>.
+                This Python-based tool minimized manual intervention and
+                enhanced parameter accuracy, leading to
+                <strong style="font-weight: 700">three patents</strong>. My
+                experience at Baidu strengthened my
+                <strong style="font-weight: 700">coding skills</strong>,
                 particularly in code quality, documentation, and
                 maintainability, ensuring the long-term usability of developed
                 tools.
@@ -473,8 +480,9 @@
                   concentration</strong
                 >. Additionally, I developed a 2D axisymmetric model for a
                 Surface Forces Apparatus cavity and performed finite element
-                analysis using <strong>COMSOL</strong>, demonstrating strong
-                agreement between analytical and simulation results.
+                analysis using <strong style="font-weight: 700">COMSOL</strong>,
+                demonstrating strong agreement between analytical and simulation
+                results.
               </p>
             </div>
 
@@ -498,10 +506,13 @@
                 >
                 under Prof. Michael Bradley. Due to COVID-19 travel
                 restrictions, my work was conducted remotely, focusing on
-                <strong>plasma motion simulations</strong> and coding tasks,
-                while gaining insights into
-                <strong>plasma processing techniques</strong>. (<a
-                  href="/docs/certificate/certificate-MITACS.pdf"
+                <strong style="font-weight: 700"
+                  >plasma motion simulations</strong
+                >
+                and coding tasks, while gaining insights into
+                <strong style="font-weight: 700"
+                  >plasma processing techniques</strong
+                >. (<a href="/docs/certificate/certificate-MITACS.pdf"
                   >View Certificate</a
                 >)
               </p>
@@ -518,15 +529,23 @@
               <p>
                 During my summer research internship under Prof. Hao Zheng, I
                 conducted an
-                <strong><i>STM study on topological insulators</i></strong
-                >. My work involved <strong>fabricating STM tips</strong> via
-                electrochemical methods, performing
-                <strong>Raman spectroscopy</strong>, and studying
-                <strong>Molecular Beam Epitaxy (MBE)</strong> and
-                <strong>Scanning Tunneling Microscopy (STM)</strong>.
-                Additionally, I contributed to assembling a
-                <strong>dilution refrigerator</strong>, gaining hands-on
-                experience with advanced experimental techniques.
+                <strong style="font-weight: 700"
+                  ><i>STM study on topological insulators</i></strong
+                >. My work involved
+                <strong style="font-weight: 700">fabricating STM tips</strong>
+                via electrochemical methods, performing
+                <strong style="font-weight: 700">Raman spectroscopy</strong>,
+                and studying
+                <strong style="font-weight: 700"
+                  >Molecular Beam Epitaxy (MBE)</strong
+                >
+                and
+                <strong style="font-weight: 700"
+                  >Scanning Tunneling Microscopy (STM)</strong
+                >. Additionally, I contributed to assembling a
+                <strong style="font-weight: 700">dilution refrigerator</strong>,
+                gaining hands-on experience with advanced experimental
+                techniques.
               </p>
             </div>
           </section>
@@ -536,15 +555,21 @@
               <h3 class="custom-title">Awards and Honors</h3>
             </header>
             <ul>
-              <li><strong>Outstanding Intern</strong>, Baidu, Inc., 2023</li>
-              <li><strong>Outstanding Graduate</strong>, HUST, 2022</li>
               <li>
-                <strong>UCAS Scholarship</strong>, University of Chinese Academy
-                of Sciences, 2020.
+                <strong style="font-weight: 700">Outstanding Intern</strong>,
+                Baidu, Inc., 2023
               </li>
               <li>
-                <strong>Yan Ji-Ci Scholarship</strong>, Institute of Physics,
-                Chinese Academy of Sciences, 2020
+                <strong style="font-weight: 700">Outstanding Graduate</strong>,
+                HUST, 2022
+              </li>
+              <li>
+                <strong style="font-weight: 700">UCAS Scholarship</strong>,
+                University of Chinese Academy of Sciences, 2020.
+              </li>
+              <li>
+                <strong style="font-weight: 700">Yan Ji-Ci Scholarship</strong>,
+                Institute of Physics, Chinese Academy of Sciences, 2020
               </li>
               <li>
                 <strong
@@ -562,8 +587,9 @@
                 >
               </li>
               <li>
-                <strong>China National Scholarship</strong>, Ministry of
-                Education of China, 2019<br />
+                <strong style="font-weight: 700"
+                  >China National Scholarship</strong
+                >, Ministry of Education of China, 2019<br />
                 <i
                   >*The highest honor for university students in China, awarded
                   to top 0.2% nationwide.</i
