--- a/outreach/ibpe.html
+++ b/outreach/ibpe.html
@@ -79,8 +79,9 @@
             </header>
             <p>
               During May 2019 - July 2020, I was the
-              <strong>chairperson</strong> of IBPE. I was the first female
-              leader of the platform since its establishment in 2002.
+              <strong style="font-weight: 700">chairperson</strong> of IBPE. I
+              was the first female leader of the platform since its
+              establishment in 2002.
             </p>
             <section>
               <header>
@@ -109,11 +110,12 @@
               </header>
               <p>
                 This is the inaugural issue of
-                <strong>IBPE Review Letters (IRL)</strong>, a journal my
-                teammates and I established to preserve and share the
-                intellectual output of IBPE members. While IBPE is known for its
-                numerous reading and exploratory activities, many brilliant
-                outcomes from past projects were unfortunately left
+                <strong style="font-weight: 700"
+                  >IBPE Review Letters (IRL)</strong
+                >, a journal my teammates and I established to preserve and
+                share the intellectual output of IBPE members. While IBPE is
+                known for its numerous reading and exploratory activities, many
+                brilliant outcomes from past projects were unfortunately left
                 undocumented, leading to the loss of valuable insights over
                 time. To address this, we created IRL to publish key
                 achievements from IBPE activities, contributions to the IBPE
@@ -149,8 +151,9 @@
               </header>
               <p>
                 After competing in the 2019 CUPT, our team proudly secured
-                <strong>second place nationwide</strong>. This photo captures
-                our joyful celebration after the competition.
+                <strong style="font-weight: 700">second place nationwide</strong
+                >. This photo captures our joyful celebration after the
+                competition.
               </p>
             </article>
             <article class="col-4 col-12-mobile special">
