--- a/research/compilation-for-neutral-atom-quantum-computers.html
+++ b/research/compilation-for-neutral-atom-quantum-computers.html
@@ -127,9 +127,10 @@
                 </p>
                 <ul>
                   <li>
-                    <strong>C. Huang</strong>, X. Zhao, H. Xu, W. Zhuang, M.-J.
-                    Hu, D. E. Liu, and J. Wang, "ZAP: Zoned Architecture and
-                    Parallelizable Compiler for Field Programmable Atom Array,"
+                    <strong style="font-weight: 700">C. Huang</strong>, X. Zhao,
+                    H. Xu, W. Zhuang, M.-J. Hu, D. E. Liu, and J. Wang, "ZAP:
+                    Zoned Architecture and Parallelizable Compiler for Field
+                    Programmable Atom Array,"
                     <i
                       >arXiv preprint
                       <a href="https://arxiv.org/abs/2411.14037"
