--- a/research/index.html
+++ b/research/index.html
@@ -106,18 +106,24 @@
                 </header>
                 <p>
                   Throughout my research journey, I have worked with various
-                  <strong>quantum computing</strong> platforms, including
-                  <strong>trapped ions</strong>, <strong>neutral atoms</strong>,
-                  and <strong>semiconductors</strong>. These experiences have
-                  provided me with a comprehensive perspective on quantum
-                  computing as a multifaceted field, encompassing
-                  <strong>physical</strong>, <strong>logical</strong>, and
-                  <strong>application</strong> layers. At the physical level, I
-                  am particularly interested in <strong>qubit control</strong>.
-                  My work in <strong>quantum compilation</strong> has allowed me
-                  to explore the logical layer, deepening my understanding of
-                  the interactions between these levels. I am also eager to
-                  explore different quantum applications.
+                  <strong style="font-weight: 700">quantum computing</strong>
+                  platforms, including
+                  <strong style="font-weight: 700">trapped ions</strong>,
+                  <strong style="font-weight: 700">neutral atoms</strong>, and
+                  <strong style="font-weight: 700">semiconductors</strong>.
+                  These experiences have provided me with a comprehensive
+                  perspective on quantum computing as a multifaceted field,
+                  encompassing
+                  <strong style="font-weight: 700">physical</strong>,
+                  <strong style="font-weight: 700">logical</strong>, and
+                  <strong style="font-weight: 700">application</strong> layers.
+                  At the physical level, I am particularly interested in
+                  <strong style="font-weight: 700">qubit control</strong>. My
+                  work in
+                  <strong style="font-weight: 700">quantum compilation</strong>
+                  has allowed me to explore the logical layer, deepening my
+                  understanding of the interactions between these levels. I am
+                  also eager to explore different quantum applications.
                 </p>
                 <a class="image featured"
                   ><img src="/images/quantum-computer-levels.jpeg" alt=""
@@ -132,7 +138,9 @@
                   >
                   underscores the growing significance of artificial
                   intelligence in scientific research. I believe that
-                  <strong>integrating AI into physics investigations</strong>
+                  <strong style="font-weight: 700"
+                    >integrating AI into physics investigations</strong
+                  >
                   is an emerging trend, offering the potential to significantly
                   accelerate discoveries and expand the boundaries of the field.
                 </p>
