--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         /* 主色调 */
         --primary: #e97164; /* 主珊瑚红 */
         --primary-dark: #d16256; /* 加深10% */
-        --primary-light: #f8d8d5; /* 浅色背景 */
+        --primary-light: #f8d8d58e; /* 浅色背景 */
 
         /* 强调色 */
         --accent: #4a7b9d; /* 深蓝色 */
