--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
         <div class="container">
           <article id="main" class="special">
             <p>
-              My given name is <strong style="font-weight: 700">Chen</strong>,
+              My given name is <strong style="font-weight: 600">Chen</strong>,
               which means "dawn" or "early morning" in Chinese. This meaning
               suits me well, as I am a morning person who enjoys the calm and
               peacefulness of the early hours. Interestingly, "Chen" is
@@ -324,7 +324,7 @@
               me "Cheng-Zi", meaning "orange."
             </p>
             <p>
-              My surname is <strong style="font-weight: 700">Huang</strong>,
+              My surname is <strong style="font-weight: 600">Huang</strong>,
               which means "yellow" in Chinese. This name has deep historical and
               cultural roots. It is often associated with the
               <a href="https://en.wikipedia.org/wiki/Yellow_Emperor"
@@ -382,20 +382,20 @@
               <p class="text-secondary">Jun. 2024 - Present</p>
               <p>
                 Under the guidance of Dr. John Michniewicz, I investigate
-                <strong
+                <strong style="font-weight: 700"
                   ><i
                     >charge noise in semiconductor spin qubits for quantum
                     computing</i
                   ></strong
                 >. My work involves
-                <strong style="font-weight: 700">wire bonding</strong> quantum
+                <strong style="font-weight: 600">wire bonding</strong> quantum
                 devices for characterization and studying
-                <strong style="font-weight: 700">charge transport</strong> in
+                <strong style="font-weight: 600">charge transport</strong> in
                 semiconductor quantum dots at cryogenic temperatures using a
-                <strong style="font-weight: 700">dilution refrigerator</strong>.
+                <strong style="font-weight: 600">dilution refrigerator</strong>.
                 To streamline experiments, I
-                <strong style="font-weight: 700"
-                  >developed an automated Python package</strong
+                <strong style="font-weight: 600"
+                  >developed automated Python packages</strong
                 >
                 that standardizes communication across experimental devices,
                 significantly improving measurement efficiency.
@@ -411,10 +411,10 @@
               <p class="text-secondary">May 2024 - Present</p>
               <p>
                 As a remote intern at BAQIS, I focus on
-                <strong
+                <strong style="font-weight: 700"
                   ><i>compilation for neutral atom quantum computers</i></strong
                 >, an emerging quantum research field. I introduced
-                <strong style="font-weight: 700">ZAP</strong>, a zoned
+                <strong style="font-weight: 600">ZAP</strong>, a zoned
                 architecture that
                 <strong
                   >divides the computational area into distinct storage and
@@ -423,7 +423,7 @@
                 algorithm, ZAP optimizes qubit placement and movement, fully
                 utilizing the dynamic connectivity and large-scale parallelism
                 of neutral atom platforms, leading to a
-                <strong style="font-weight: 700"
+                <strong style="font-weight: 600"
                   >significant fidelity improvement</strong
                 >. This work is available on
                 <a href="https://arxiv.org/abs/2411.14037">arXiv</a>.
@@ -440,19 +440,19 @@
               <p class="text-secondary">Mar. 2023 - Sep. 2023</p>
               <p>
                 Under Dr. Jingbo Wang, I developed an
-                <strong
+                <strong style="font-weight: 700"
                   ><i
                     >automated calibration framework for trapped-ion quantum
                     computers</i
                   ></strong
                 >, enabling precise determination of
-                <strong style="font-weight: 700">phonon frequencies</strong> and
-                <strong style="font-weight: 700">Lamb-Dicke parameters</strong>.
+                <strong style="font-weight: 600">phonon frequencies</strong> and
+                <strong style="font-weight: 600">Lamb-Dicke parameters</strong>.
                 This Python-based tool minimized manual intervention and
                 enhanced parameter accuracy, leading to
-                <strong style="font-weight: 700">three patents</strong>. My
+                <strong style="font-weight: 600">three patents</strong>. My
                 experience at Baidu strengthened my
-                <strong style="font-weight: 700">coding skills</strong>,
+                <strong style="font-weight: 600">coding skills</strong>,
                 particularly in code quality, documentation, and
                 maintainability, ensuring the long-term usability of developed
                 tools.
@@ -469,7 +469,7 @@
               <p class="text-secondary">Apr. 2019 - Dec. 2022</p>
               <p>
                 For my final year project,
-                <strong
+                <strong style="font-weight: 700"
                   ><i
                     >Nanoscale Detection of Ions Using a Spin Quantum Sensor</i
                   ></strong
@@ -480,7 +480,7 @@
                   concentration</strong
                 >. Additionally, I developed a 2D axisymmetric model for a
                 Surface Forces Apparatus cavity and performed finite element
-                analysis using <strong style="font-weight: 700">COMSOL</strong>,
+                analysis using <strong style="font-weight: 600">COMSOL</strong>,
                 demonstrating strong agreement between analytical and simulation
                 results.
               </p>
@@ -499,18 +499,18 @@
                 >
                   MITACS Globalink Research Internship</a
                 >, I contributed to the project
-                <strong
+                <strong style="font-weight: 700"
                   ><i
                     >New Plasma Processing Techniques for Advanced Materials</i
                   ></strong
                 >
                 under Prof. Michael Bradley. Due to COVID-19 travel
                 restrictions, my work was conducted remotely, focusing on
-                <strong style="font-weight: 700"
+                <strong style="font-weight: 600"
                   >plasma motion simulations</strong
                 >
                 and coding tasks, while gaining insights into
-                <strong style="font-weight: 700"
+                <strong style="font-weight: 600"
                   >plasma processing techniques</strong
                 >. (<a href="/docs/certificate/certificate-MITACS.pdf"
                   >View Certificate</a
@@ -532,18 +532,18 @@
                 <strong style="font-weight: 700"
                   ><i>STM study on topological insulators</i></strong
                 >. My work involved
-                <strong style="font-weight: 700">fabricating STM tips</strong>
+                <strong style="font-weight: 600">fabricating STM tips</strong>
                 via electrochemical methods, performing
-                <strong style="font-weight: 700">Raman spectroscopy</strong>,
+                <strong style="font-weight: 600">Raman spectroscopy</strong>,
                 and studying
-                <strong style="font-weight: 700"
+                <strong style="font-weight: 600"
                   >Molecular Beam Epitaxy (MBE)</strong
                 >
                 and
-                <strong style="font-weight: 700"
+                <strong style="font-weight: 600"
                   >Scanning Tunneling Microscopy (STM)</strong
                 >. Additionally, I contributed to assembling a
-                <strong style="font-weight: 700">dilution refrigerator</strong>,
+                <strong style="font-weight: 600">dilution refrigerator</strong>,
                 gaining hands-on experience with advanced experimental
                 techniques.
               </p>
