--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
                 Institute of Physics, Chinese Academy of Sciences, 2020
               </li>
               <li>
-                <strong
+                <strong style="font-weight: 700"
                   >Outstanding Undergraduate in Term of Academic
                   Performance</strong
                 >, HUST, 2019<br />
