--- a/index.html
+++ b/index.html
@@ -557,24 +557,17 @@
             </header>
             <ul>
               <li>
-                <strong style="font-weight: 700">Outstanding Intern</strong>,
-                Baidu, Inc., 2023
-              </li>
-              <li>
-                <strong style="font-weight: 700">Outstanding Graduate</strong>,
-                HUST, 2022
-              </li>
-              <li>
-                <strong style="font-weight: 700">UCAS Scholarship</strong>,
-                University of Chinese Academy of Sciences, 2020.
-              </li>
-              <li>
-                <strong style="font-weight: 700">Yan Ji-Ci Scholarship</strong>,
-                Institute of Physics, Chinese Academy of Sciences, 2020
+                <strong style="font-weight: 700"
+                  >China National Scholarship</strong
+                >, Ministry of Education of China, 2019<br />
+                <i
+                  >*The highest honor for university students in China, awarded
+                  to top 0.2% nationwide.</i
+                >
               </li>
               <li>
                 <strong style="font-weight: 700"
-                  >Outstanding Undergraduate in Term of Academic
+                  >Outstanding Undergraduates in Term of Academic
                   Performance</strong
                 >, HUST, 2019<br />
                 <i
@@ -588,13 +581,21 @@
                 >
               </li>
               <li>
-                <strong style="font-weight: 700"
-                  >China National Scholarship</strong
-                >, Ministry of Education of China, 2019<br />
-                <i
-                  >*The highest honor for university students in China, awarded
-                  to top 0.2% nationwide.</i
-                >
+                <strong style="font-weight: 700">Yan Ji-Ci Scholarship</strong>,
+                Institute of Physics, Chinese Academy of Sciences, 2020
+              </li>
+              <li>
+                <strong style="font-weight: 700">UCAS Scholarship</strong>,
+                University of Chinese Academy of Sciences, 2020.
+              </li>
+
+              <li>
+                <strong style="font-weight: 700">Outstanding Graduate</strong>,
+                HUST, 2022
+              </li>
+              <li>
+                <strong style="font-weight: 700">Outstanding Intern</strong>,
+                Baidu, Inc., 2023
               </li>
             </ul>
           </section>
