--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
               <li>
                 <strong style="font-weight: 700"
                   >China National Scholarship</strong
-                >, Ministry of Education of China, 2019<br />
+                >, Ministry of Education of P.R. China, 2019<br />
                 <i
                   >*The highest honor for university students in China, awarded
                   to top 0.2% nationwide.</i
