--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
             </ul>
             <br /><br />
             <p>
-              <a href="#main" class="icon fa-solid fa-angle-down scrolly"
+              <a href="#main" class="scrolly"
                 >Welcome to Chen's Physics World!</a
               >
             </p>
