--- a/index.html
+++ b/index.html
@@ -561,8 +561,7 @@
                   >China National Scholarship</strong
                 >, Ministry of Education of P.R. China, 2019<br />
                 <i
-                  >*The highest honor for university students in China, awarded
-                  to top 0.2% nationwide.</i
+                  >*The highest honor for university students in China.</i
                 >
               </li>
               <li>
