--- a/index.html
+++ b/index.html
@@ -560,9 +560,7 @@
                 <strong style="font-weight: 700"
                   >China National Scholarship</strong
                 >, Ministry of Education of P.R. China, 2019<br />
-                <i
-                  >*The highest honor for university students in China.</i
-                >
+                <i>*The highest honor for university students in China.</i>
               </li>
               <li>
                 <strong style="font-weight: 700"
