--- a/index.html
+++ b/index.html
@@ -271,12 +271,14 @@
         <div class="container">
           <div class="row gtr-200">
             <div class="col-3 col-12-mobile">
-              <a class="image fit centered"
-                ><img
+              <div class="profile-image-container">
+                <img
                   src="/images/profile.jpg"
-                  alt=""
-                  style="width: 80%; border-radius: 50%"
-              /></a>
+                  alt="Chen Huang"
+                  class="profile-image hover-grow"
+                  style="width: 120px; border-radius: 50%"
+                />
+              </div>
             </div>
             <div class="col-9 col-12-mobile imp-mobile" id="content">
               <header>
