--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -342,7 +342,10 @@
               <div class="copyright">
                 <ul class="menu">
                   <li>&copy; Untitled. All rights reserved.</li>
-                  <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+                  <li>
+                    Design: <a href="http://html5up.net">HTML5 UP</a>,
+                    <a href="https://www.deepseek.com/">DeepSeek</a>
+                  </li>
                 </ul>
               </div>
             </div>
