--- a/research/index.html
+++ b/research/index.html
@@ -302,7 +302,10 @@
               <div class="copyright">
                 <ul class="menu">
                   <li>&copy; 2025 Chen Huang. All rights reserved.</li>
-                  <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+                  <li>
+                    Design: <a href="http://html5up.net">HTML5 UP</a>,
+                    <a href="https://www.deepseek.com/">DeepSeek</a>
+                  </li>
                 </ul>
               </div>
             </div>
