--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@
               <ul class="menu">
                 <li>&copy; 2025 Chen Huang. All rights reserved.</li>
                 <li>
-                  Design: <a href="http://html5up.net">HTML5 UP</a>
+                  Design: <a href="http://html5up.net">HTML5 UP</a>,
                   <a href="https://www.deepseek.com/">DeepSeek</a>
                 </li>
               </ul>
