--- a/index.html
+++ b/index.html
@@ -271,7 +271,15 @@
         <div class="container">
           <div class="row gtr-200">
             <div class="col-3 col-12-mobile">
-              <div class="profile-image-container">
+              <div
+                class="profile-image-container"
+                style="
+                  display: flex;
+                  justify-content: center;
+                  align-items: center;
+                  margin: 0 auto;
+                "
+              >
                 <img
                   src="/images/profile.jpg"
                   alt="Chen Huang"
