--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
       <div id="main" class="wrapper style1">
         <div class="container">
           <div class="row gtr-200">
-            <div class="col-3 col-12-mobile">
+            <div class="col-3">
               <div
                 class="profile-image-container"
                 style="
