--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
               peacefulness of the early hours. Interestingly, "Chen" is
               sometimes misheard as "Cheng," which means "orange" in Chinese.
               Because of this playful similarity, my friends affectionately call
-              me "Cheng-Zi", meaning "orange."
+              me "Cheng-Zi," meaning "orange."
             </p>
             <p>
               My surname is <strong style="font-weight: 600">Huang</strong>,
