--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
       <div id="main" class="wrapper style1">
         <div class="container">
           <div class="row gtr-200">
-            <div class="col-3">
+            <div class="col-3 col-12-mobile">
               <div
                 class="profile-image-container"
                 style="
@@ -278,7 +278,7 @@
                   justify-content: center;
                   align-items: center;
                   margin: 0 auto;
-                " 
+                "
               >
                 <img
                   src="/images/profile.jpg"
