--- a/index.html
+++ b/index.html
@@ -216,7 +216,13 @@
                   ><span class="label">Linkedin</span></a
                 >
               </li>
+              <li>
+                <a href="/docs/CV_ChenHuang.pdf" class="icon fa-solid fa-file"
+                  ><span class="label">CV</span></a
+                >
+              </li>
             </ul>
+
             <br /><br />
             <p>
               <a href="#main" class="scrolly"
